@@ -51,6 +51,9 @@
 - Files included via the `[include]` section are read in sorted order.  In
   past versions, the order was undefined.  Patch by Ionel Cristian Mărieș.
 
+- Fixed a bug introduced in 3.1.0 where ``supervisord`` could crash when
+  attempting to display a resource limit error.
+
 3.1.3 (2014-10-28)
 ------------------
 
